--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -37,7 +37,7 @@
       <span>Jan Coders Portfolio</span>
       
      
-      <span class="side-nav-but-spacer"></span>
+      <span class="side-nav-toolbar-spacer"></span>
       <app-counter-data></app-counter-data>
       <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
         <mat-icon>favorite</mat-icon>
