--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -3,7 +3,7 @@
     <div class="docs-header-section">
         <div class="docs-header-headline">
             <h1 class="mat-h1">Jan Warzecha</h1>
-            <h2> Portfolio programisty</h2>
+            <h2>Portfolio programisty</h2>
         </div>
         <div class="docs-header-start">
             <a mat-raised-button class="docs-button" routerLink="/guide/getting-started">Zaczynamy!</a>
@@ -11,5 +11,7 @@
     </div>
 </header>
 
-<app-ngb-carusel></app-ngb-carusel>
+<div class='carusel-container'>
+    <app-ngb-carusel></app-ngb-carusel>
+</div>
 
