--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -38,7 +38,7 @@
       
      
       <span class="side-nav-toolbar-spacer"></span>
-      <app-counter-data></app-counter-data>
+      <app-counter-data class="toolbar-date"></app-counter-data>
       <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
         <mat-icon>favorite</mat-icon>
       </button>
