--- a/src/app/components/counter-data/counter-data.component.html
+++ b/src/app/components/counter-data/counter-data.component.html
@@ -1,3 +1,4 @@
-<span>{{currentDate | date:'EEEE d LLLL YYYY'}}</span>
+<div>{{currentDate | date:'EEEE '}}</div>
+<div>{{currentDate | date:'d LLLL YYYY'}}</div>
 
 
