--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -18,7 +18,7 @@ overflow-y: hidden;
 }
 
 .mat-toolbar.mat-primary {
-  font-size: 28px;
+  font-size: 5.9vw;
     font-weight: bold;
     line-height: 28px;
    
@@ -41,6 +41,10 @@ overflow-y: hidden;
   flex: 1 1 auto;
 }
 .toolbar-date{
-  font-size: 22px ;
+  font-size: 3.0vh; 
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
