--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -48,12 +48,11 @@ $margin-promotion-sections-small: 15px;
   }
 }
 .carusel-container {
-  align-items: center;
   display: flex;
+  align-items: center;
   flex-direction: column;
-  padding: 16px;
-  width: 75%;
-  max-width: 1080px;
+  width:100%;
+  max-width: 100%;
   margin: auto;
 }
 .docs-homepage-promo {
