--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -34,7 +34,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Jan Coders Portfolio</span>
+      <span>Jan's Code:</span>
       
      
       <span class="side-nav-toolbar-spacer"></span>
