--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
@@ -1,11 +1,12 @@
 
-<ngb-carousel *ngIf="images" [showNavigationArrows]="showNavigationArrows"
-    [showNavigationIndicators]="showNavigationIndicators">
-    <ng-template ngbSlide *ngFor="let image of images">
-        <div class="picsum-img-wrapper">
-            <img [src]="image" alt="Random slide" >
-        </div>
+<ngb-carousel #carousel  [showNavigationArrows]="showNavigationArrows"
+    [showNavigationIndicators]="showNavigationIndicators"  [interval]="3333" [pauseOnHover]="pauseOnHover" [pauseOnFocus]="pauseOnFocus" (slide)="onSlide($event)">
+    <ng-template ngbSlide *ngFor="let img of images; index as i">
         <div class="carousel-caption">
+            <h3>My slide {{i + 1}} title</h3>
+        </div>
+            <img [src]="img" alt="Random slide">
+                <div class="carousel-caption">
             <h3>No mouse navigation</h3>
             <p>This carousel hides navigation arrows and indicators.</p>
         </div>
@@ -19,4 +20,24 @@
         class="btn btn-outline-dark btn-sm">Toggle navigation arrows</button>
     <button mat-raised-button (click)="showNavigationIndicators = !showNavigationIndicators"
         class="btn btn-outline-dark btn-sm">Toggle navigation indicators</button>
+        
 </div>
+<div class="form-check">
+    <input type="checkbox" class="form-check-input" id="pauseOnHover" [(ngModel)]="pauseOnHover">
+    <label class="form-check-label" for="pauseOnHover">Pause on hover</label>
+</div>
+<div class="form-check">
+    <input type="checkbox" class="form-check-input" id="pauseOnFocus" [(ngModel)]="pauseOnFocus">
+    <label class="form-check-label" for="pauseOnFocus">Pause on focus</label>
+</div>
+<div class="form-check">
+    <input type="checkbox" class="form-check-input" id="unpauseOnArrow" [(ngModel)]="unpauseOnArrow">
+    <label class="form-check-label" for="unpauseOnArrow">Unpause when clicking on arrows</label>
+</div>
+<div class="form-check">
+    <input type="checkbox" class="form-check-input" id="pauseOnIndicator" [(ngModel)]="pauseOnIndicator">
+    <label class="form-check-label" for="pauseOnIndicator">Pause when clicking on navigation indicator</label>
+</div>
+<button type="button" (click)="togglePaused()" class="btn btn-outline-dark btn-sm">
+    {{paused ? 'Cycle' : 'Pause' }}
+</button>
