--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
@@ -5,8 +5,9 @@
         <div class="carousel-caption">
             <h3>My slide {{i + 1}} title</h3>
         </div>
-            <img [src]="img" alt="Random slide">
-                <div class="carousel-caption">
+        <div class="picsum-img-wrapper">
+            <img [src]="img" alt="Random slide" style="width: 100%;"></div>
+            <div class="carousel-caption">
             <h3>No mouse navigation</h3>
             <p>This carousel hides navigation arrows and indicators.</p>
         </div>
@@ -14,30 +15,29 @@
 </ngb-carousel>
 
 <hr>
-
-<div class="btn-group" role="group" aria-label="Carousel toggle controls">
+<div class="btn-group" aria-label="Carousel toggle controls">
+    <button mat-raised-button (click)="togglePaused()">
+        {{paused ? 'Cycle' : 'Pause' }}
+    </button>
     <button mat-raised-button (click)="showNavigationArrows = !showNavigationArrows"
-        class="btn btn-outline-dark btn-sm">Toggle navigation arrows</button>
+        >Toggle navigation arrows</button>
     <button mat-raised-button (click)="showNavigationIndicators = !showNavigationIndicators"
-        class="btn btn-outline-dark btn-sm">Toggle navigation indicators</button>
+        >Toggle navigation indicators</button>
+    
         
+    <mat-checkbox [(ngModel)]="pauseOnHover">Pause on hover
+    </mat-checkbox>
+
+    <mat-checkbox id="pauseOnFocus" [(ngModel)]="pauseOnFocus">
+    Pause on focus
+    </mat-checkbox>
+
+    <mat-checkbox id="unpauseOnArrow" [(ngModel)]="unpauseOnArrow">
+    Unpause when clicking on arrows
+    </mat-checkbox>
+
+    <mat-checkbox id="pauseOnIndicator" [(ngModel)]="pauseOnIndicator">
+    Pause when clicking on navigation indicator
+    </mat-checkbox>
+    
 </div>
-<div class="form-check">
-    <input type="checkbox" class="form-check-input" id="pauseOnHover" [(ngModel)]="pauseOnHover">
-    <label class="form-check-label" for="pauseOnHover">Pause on hover</label>
-</div>
-<div class="form-check">
-    <input type="checkbox" class="form-check-input" id="pauseOnFocus" [(ngModel)]="pauseOnFocus">
-    <label class="form-check-label" for="pauseOnFocus">Pause on focus</label>
-</div>
-<div class="form-check">
-    <input type="checkbox" class="form-check-input" id="unpauseOnArrow" [(ngModel)]="unpauseOnArrow">
-    <label class="form-check-label" for="unpauseOnArrow">Unpause when clicking on arrows</label>
-</div>
-<div class="form-check">
-    <input type="checkbox" class="form-check-input" id="pauseOnIndicator" [(ngModel)]="pauseOnIndicator">
-    <label class="form-check-label" for="pauseOnIndicator">Pause when clicking on navigation indicator</label>
-</div>
-<button type="button" (click)="togglePaused()" class="btn btn-outline-dark btn-sm">
-    {{paused ? 'Cycle' : 'Pause' }}
-</button>
