--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
@@ -1,6 +1,10 @@
 .btn-group{
     display: flex;
-  width: 100%;
+    flex-wrap: wrap;
+  width: 95%;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  max-width: 100%;
+  height: auto;
 }
+    
