--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
@@ -1,10 +1,8 @@
-.btn-group{
+.button-group {
     display: flex;
-    flex-wrap: wrap;
-  width: 95%;
-  align-items: center;
-  justify-content: space-evenly;
-  max-width: 100%;
-  height: auto;
-}
+    flex-flow: row wrap;
     
+}
+button{
+  margin:auto;
+}
