in-app-memory & ngbcarusel

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -13,6 +13,14 @@
 
 
     <app-ngb-carusel></app-ngb-carusel>
-<app-heroes></app-heroes>
+<div class=".docs-homepage-promo">
+    <h1>{{title}}</h1>
+    <nav>
+        <a routerLink="/dashboard">Dashboard</a>
+        <a routerLink="/heroes">Heroes</a>
+    </nav>
+    <router-outlet></router-outlet>
+    
+</div>
 
 
