--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
@@ -1,12 +1,12 @@
 
 <ngb-carousel #carousel  [showNavigationArrows]="showNavigationArrows"
     [showNavigationIndicators]="showNavigationIndicators"  [interval]="3000" [pauseOnHover]="pauseOnHover" [pauseOnFocus]="pauseOnFocus" (slide)="onSlide($event)">
-    <ng-template ngbSlide *ngFor="let img of images; index as i">
+    <ng-template ngbSlide  *ngFor="let hero of heroes">
         <div class="carousel-caption">
-            <h3>My slide {{i + 1}} title</h3>
+            <h3>My slide {{hero.id}} title</h3>
         </div>
         <div class="picsum-img-wrapper">
-            <img [src]="img" alt="Random slide" style="width: 100%;"></div>
+            <img [src]="hero.image_url" alt="Random slide" style="width: 100%;"></div>
             <div class="carousel-caption">
             <h3>No mouse navigation</h3>
             <p>This carousel hides navigation arrows and indicators.</p>
