--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -43,7 +43,7 @@
         <mat-icon>favorite</mat-icon>
       </button>
     </mat-toolbar>
-    
+    <app-messages></app-messages>
   <!-- Add Content Here -->
   <ng-content #ngcontent></ng-content>
   </mat-sidenav-content>
