--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
@@ -1,43 +1,74 @@
 <div class="carusel-container">
     <ngb-carousel #carousel [showNavigationArrows]="showNavigationArrows"
-    [showNavigationIndicators]="showNavigationIndicators"  [interval]="3000" [pauseOnHover]="pauseOnHover" [pauseOnFocus]="pauseOnFocus" (slide)="onSlide($event)">
-    <ng-template ngbSlide  *ngFor="let hero of heroes">
-        <div class="img-wrapper">
-            <img [src]="hero.image_url" class="img_slide" alt={{hero.img_alt}}>
-        </div>
-            <div class="carousel-caption">
-            <h3>{{hero.title}}</h3>
-            <p>{{hero.description}}.</p>
-        </div>
-    </ng-template>
-</ngb-carousel>
-
-<hr>
-<div class="button-group" aria-label="Carousel toggle controls">
-    <button mat-raised-button (click)="togglePaused()">
-        {{paused ? 'Play' : 'Pause' }}
-        <mat-icon>{{icon}}</mat-icon>
-    </button>
-    <button mat-raised-button (click)="showNavigationArrows = !showNavigationArrows"
-        >Toggle navigation arrows</button>
-    <button mat-raised-button (click)="showNavigationIndicators = !showNavigationIndicators"
-        >Toggle navigation indicators</button>
-    
+        [showNavigationIndicators]="showNavigationIndicators" [interval]="interval.value" (slide)="onSlide($event)">
         
-    <button mat-raised-button [(ngModel)]="pauseOnHover">Pause on hover
-    </button>
+         
+        <ng-template ngbSlide *ngFor="let hero of heroes">
+            <div class="img-wrapper">
+                <img [src]="hero.image_url" class="img_slide" alt={{hero.img_alt}}>
+            </div>
+            <div class="carousel-caption">
+                <h3>{{hero.title}}</h3>
+                <p>{{hero.description}}.</p>
+                </div>
+                </ng-template>
+                </ngb-carousel>
 
-    <button mat-raised-button [(ngModel)]="pauseOnFocus">
-    Pause on focus
-    </button>
+    <hr>
+    <div class="button-group" aria-label="Carousel toggle controls">
+        <button mat-raised-button (click)="togglePaused()">
+            {{paused ? 'Cycle' : 'Pause'}}
+            <mat-icon>{{paused ? 'play_circle_outline' : 'pause_circle_outline'}}</mat-icon>
+            </button>
+<mat-accordion class="slide-controls-panel">
+    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Picture Slideshow Controls:
+            </mat-panel-title>
+            <mat-panel-description>
+                Controls are {{panelOpenState ? 'open' : 'closed'}}
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+        <div class="button-group-panel" aria-label="Carousel toggle controls">
 
-    <button mat-raised-button [(ngModel)]="unpauseOnArrow">
-    Unpause when clicking on arrows
-    </button>
+            <mat-form-field appearance="legacy" class="mat-elevation-z2 form-center" floatLabel="always">
+                <mat-label>1 second = 1000 miliseconds</mat-label>
+                <input matInput type="number" [formControl]="interval" class="interval-right-align"
+                    placeholder={{interval.value}}>
+                <span matPrefix>Interval&nbsp;</span>
+                <span matSuffix>&nbsp; miliseconds</span>
+            </mat-form-field>
 
-    <button mat-raised-button [(ngModel)]="pauseOnIndicator">
-        Pause when clicking on indicator
-    </button>
-    
-</div>
-</div>
+                    <button mat-raised-button aria-label="Toggle navigation arrows" (click)="showNavigationArrows = !showNavigationArrows">
+                        <mat-icon>keyboard_arrow_left</mat-icon>
+                        Toggle navigation arrows
+                        <mat-icon>keyboard_arrow_right</mat-icon>
+                    </button>
+
+                    <button mat-raised-button aria-label="Toggle navigation
+                                    indicators" (click)="showNavigationIndicators = !showNavigationIndicators">
+                        <mat-icon>minimize</mat-icon>
+                        <mat-icon>minimize</mat-icon>
+                        <mat-icon>minimize</mat-icon>
+                        Toggle navigation indicators
+                    </button>
+                    <button mat-raised-button [(ngModel)]="pauseOnHover">Pause on hover
+                    </button>
+
+                    <button mat-raised-button [(ngModel)]="pauseOnFocus">
+                        Pause on focus
+                    </button>
+
+                    <button mat-raised-button [(ngModel)]="unpauseOnArrow">
+                        Unpause when clicking on arrows
+                    </button>
+
+                    <button mat-raised-button [(ngModel)]="pauseOnIndicator">
+                        Pause when clicking on indicator
+                    </button>
+                </div>
+            </mat-expansion-panel>
+            
+            </mat-accordion>
+    </div>
