--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -2,7 +2,7 @@ body{max-height: 100%;
 overflow-y: hidden;
 }
 .sidenav-container {
-  height: 100%;
+ height: 100%;
 }
 
 .sidenav {
@@ -20,8 +20,7 @@ overflow-y: hidden;
 .mat-toolbar.mat-primary {
   font-size: 5.9vw;
     font-weight: bold;
-    line-height: 28px;
-   
+    height: 11%;
   position: static;
   top: 0;
   z-index: 1;
@@ -41,8 +40,8 @@ overflow-y: hidden;
   flex: 1 1 auto;
 }
 .toolbar-date{
-  font-size: 3.0vh; 
-  
+  font-size: 2vw; 
+  line-height: 2vw;
   display: flex;
   flex-direction: column;
   align-items: center;
