--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
@@ -1,4 +1,4 @@
-<div class="carusel-container">
+<div class="container">
     <ngb-carousel #carousel [showNavigationArrows]="showNavigationArrows"
         [showNavigationIndicators]="showNavigationIndicators" [interval]="interval.value" (slide)="onSlide($event)">
         
