--- a/src/app/components/hero/messages/messages.component.html
+++ b/src/app/components/hero/messages/messages.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="messageService.messages.length">
+<div class="container" *ngIf="messageService.messages.length">
 
   <h2>Messages</h2>
-  <button class="clear"
+  <button mat-raised-button [disabled]="isDisabled" class="clear"
           (click)="messageService.clear()">Clear messages</button>
   <div *ngFor='let message of messageService.messages'> {{message}} </div>
 
