--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -11,20 +11,19 @@
         </div>
     </div>
 </header>
-<hr>
-<h1>About me:</h1>
-<app-ngb-carusel>
 
+<div class="container">
+    <h1>About me:</h1>
+    <app-ngb-carusel></app-ngb-carusel>
+</div>
 
-</app-ngb-carusel>
-<hr>
-<div class=".docs-homepage-promo">
-    <h1>{{title}}</h1>
+<div class="container">
+            <h1>{{title}}</h1>
     <nav>
         <a routerLink="/dashboard">Dashboard</a>
         <a routerLink="/heroes">Heroes</a>
     </nav>  
-</div>
+    </div>
 </div>
 
 
