--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
@@ -17,10 +17,12 @@
 .carousel-caption{
   text-shadow: 0 1px 0 #7c7c7c,
                0 2px 0 #4e4e4e;
+               white-space:pre-line; // 
+               text-align: left; 
   h3 {
     font-size: 36px;
     font-weight: 600;
-        margin: 50% 40% auto 0;
+        margin: 40% 30% auto 0;
   }
 
   p {
