--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <ngb-carousel #carousel [showNavigationArrows]="showNavigationArrows"
-        [showNavigationIndicators]="showNavigationIndicators" [interval]="interval.value" (slide)="onSlide($event)">
+        [showNavigationIndicators]="showNavigationIndicators" [pauseOnHover]="pauseOnHover"[interval]="interval.value" (slide)="onSlide($event)">
         
          
         <ng-template ngbSlide *ngFor="let hero of heroes">
@@ -14,13 +14,14 @@
                 </ng-template>
                 </ngb-carousel>
 
-    <hr>
+<hr>
+
     <div class="button-group" aria-label="Carousel toggle controls">
         <button mat-raised-button (click)="togglePaused()">
             {{paused ? 'Cycle' : 'Pause'}}
             <mat-icon>{{paused ? 'play_circle_outline' : 'pause_circle_outline'}}</mat-icon>
-            </button>
-<mat-accordion class="slide-controls-panel">
+        </button>
+    <mat-accordion class="slide-controls-panel">
     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
         <mat-expansion-panel-header>
             <mat-panel-title>
@@ -30,11 +31,12 @@
                 Controls are {{panelOpenState ? 'open' : 'closed'}}
             </mat-panel-description>
         </mat-expansion-panel-header>
-        <div class="button-group-panel" aria-label="Carousel toggle controls">
+
+    <div class="button-group-panel" aria-label="Carousel toggle controls">
 
             <mat-form-field appearance="legacy" class="mat-elevation-z2 form-center" floatLabel="always">
                 <mat-label>1 second = 1000 miliseconds</mat-label>
-                <input matInput type="number" [formControl]="interval" class="interval-right-align"
+                <input matInput type="number"  [formControl]="interval" class="interval-right-align"
                     placeholder={{interval.value}}>
                 <span matPrefix>Interval&nbsp;</span>
                 <span matSuffix>&nbsp; miliseconds</span>
@@ -49,11 +51,9 @@
                     <button mat-raised-button aria-label="Toggle navigation
                                     indicators" (click)="showNavigationIndicators = !showNavigationIndicators">
                         <mat-icon>minimize</mat-icon>
-                        <mat-icon>minimize</mat-icon>
-                        <mat-icon>minimize</mat-icon>
                         Toggle navigation indicators
                     </button>
-                    <button mat-raised-button [(ngModel)]="pauseOnHover">Pause on hover
+                    <button mat-raised-button (click)="pauseOnHover = !pauseOnHover">Pause on hover
                     </button>
 
                     <button mat-raised-button [(ngModel)]="pauseOnFocus">
@@ -72,3 +72,4 @@
             
             </mat-accordion>
     </div>
+    <hr>
