--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -31,23 +31,22 @@ $margin-promotion-sections-small: 15px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
 .docs-header-headline {
-height: 100%;  
-  h1 {
-    font-size: 56px;
+    height: 100%;  
+  .mat-h1 {
+    font-size: 66px;
     font-weight: bold;
     line-height: 56px;
     margin: 15px 5px;
   }
-
+  
   h2 {
     font-size: 20px;
     font-weight: 300;
     line-height: 28px;
     margin: 15px 0 25px 0;
   }
+ }
 }
   mat-divider {
     width: 100%;
@@ -56,7 +55,21 @@ height: 100%;
   mat-icon {
     vertical-align: middle;
   }
-
+.container {
+  h1 {
+    font-size: 46px;
+    font-weight: bold;
+    line-height: 56px;
+    margin: 15px 5px;
+  }
+  h2{
+        font-size: 20px;
+    font-weight: 400;
+    line-height: 28px;
+    margin: 15px 0 25px 0;
+  
+  }
+}
 /*comment out unused css
 
 .docs-homepage-promo {
