--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
@@ -7,7 +7,7 @@
             <div class="img-wrapper">
                 <img [src]="hero.image_url" class="img_slide" alt={{hero.img_alt}}>
             </div>
-            <div class="carousel-caption">
+            <div class="carousel-caption"  cdkDragBoundary=".container" cdkDrag>
                 <h3>{{hero.title}}</h3>
                 <p>{{hero.description}}.</p>
                 </div>
@@ -72,4 +72,4 @@
             
             </mat-accordion>
     </div>
-    <hr>
+    
