--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -13,19 +13,20 @@
 </header>
 <div>
 
-<div id="About" class="container" routerLink="/app-homepage#Jan">
+<div id="About" class="container" >
     <h1>About me:</h1>
     <app-ngb-carusel></app-ngb-carusel>
-    <div id="About" class="container" routerLink="/app-homepage#About">
+    <div id="About" class="container" >
     </div>
 
-<div id="skills" class="container" routerLink="/app-homepage#skills">
+<div id="skills">
     <h1>Skills:</h1>
 
 </div>
-<div id="projects" class="container" routerLink="/app-homepage#project">
-    <h1>Projets:</h1>
+<div id="projects" class="container" >
+    <h1>Projects:</h1>
+    <app-projects-grid></app-projects-grid>
 </div>
-<div id="contact" class="container" routerLink="/app-homepage#contact">
+<div id="contact" class="container" >
     <h1>Contact me:</h1>
 </div>
