--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
@@ -15,47 +15,53 @@
 }
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
 .carousel-caption{
-  color:black;
-  max-height: 100%;
-      -webkit-backdrop-filter: blur(3px);
-      backdrop-filter: blur(3px);
-      background-color: rgba($color: rgba(128, 128, 128), $alpha: 0.4);  
-      border-radius: 16px;
 
   white-space:pre-line; // \n\u2022 work properly in TS
  text-align: left;
- padding-left: 2%;
- line-height: 2em;
+padding-left: 3%;
+position:absolute;
+bottom: 8%;
+right:10%;
+left:10%;
+height:auto;
+max-height: 100%;
+text-shadow: 2px 2px 2px black;
+color:#ffffff;
+background:#8080800d;
+box-shadow:0 8px 32px 0 #1f268780;
+backdrop-filter:blur(3px);
+-webkit-backdrop-filter:blur(3px);
+border-radius:10px;
+border:1px solid #ffffff;
+-webkit-box-shadow: 2px 3px 7px 1px #000000d0; 
+line-height: 2em;
 }
-
   .carousel-caption h3 {
-    font-size: 20px;
-    font-weight: 400;
-    text-align: center;
-   
-  }
+    font-size:28px;
+    font-weight: 400;     }
 
   .carousel-caption p {
-    font-size: 16px;
-    font-weight: 400;
-    
-    margin: 15px 0 25px 0;
-  }
+    font-size:24px;
+    font-weight: 300;
+      }
 }
 
 
 .button-group {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     column-gap: 1em;
     row-gap: 1em;
-    margin:0 1em;
-    justify-content:center;
+    align-content:center;
+    justify-content: center;
+    width: 100%;
     max-width: 100%;
 }
-
+.cycle_pause_button{
+width: 25%;
+}
 .slide-controls-panel{
-    width: 80%;
+    width: 75%;
     
 }
 
