--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,32 +1,34 @@
-<div id='Jan' class="container">
+<div id='Jan' class="container-fluid">
     <header class="docs-header-background"
     aria-label="Get started" id="homepage-header">
     <div class="docs-header-section">
         <div class="docs-header-headline">
             <h1 class="mat-h1">Jan Warzecha</h1>
-            <h2>Angular Material coders Portfolio</h2>
+            <h2>Angular Material Coder Portfolio</h2>
         </div>
         <div class="docs-header-start">
-            <a mat-raised-button class="docs-button" routerLink="/app-homepage#projects">Zaczynamy!</a>
+            <a mat-raised-button class="docs-button" routerLink="/app-homepage#projects">It's on</a>
         </div>
     </div>
 </header>
 <div>
 
-<div id="About" class="container" >
+<div id="About" class="homepage-tile" >
     <h1>About me:</h1>
     <app-ngb-carusel></app-ngb-carusel>
-    <div id="About" class="container" >
+
+    
+    <div id="About" class="homepage-tile" >
     </div>
 
 <div id="skills">
     <h1>Skills:</h1>
 
 </div>
-<div id="projects" class="container" >
+<div id="projects" class="homepage-tile" >
     <h1>Projects:</h1>
     <app-projects-grid></app-projects-grid>
 </div>
-<div id="contact" class="container" >
+<div id="contact" class="homepage-tile" >
     <h1>Contact me:</h1>
 </div>
