--- a/src/app/components/projects-grid/projects-grid.component.scss
+++ b/src/app/components/projects-grid/projects-grid.component.scss
@@ -1,8 +1,8 @@
 @use '~@angular/material' as mat;
 
 .grid-container {
-  margin: 20px;
-}
+  width: 100%;
+  }
 .dashboard-card {
   position: absolute;
   top: 15px;
@@ -10,6 +10,7 @@
   right: 15px;
   bottom: 15px;
  max-height: 100%;
+ max-width: 100%;
   &:hover {
     @include mat.elevation(8);
   }
@@ -22,16 +23,22 @@
 }
 
 .dashboard-card-content {
- 
+ max-width: 100%;
+ max-height: 100%;
   }
 
 .img_project{
-  height: fit-content; //so that it takes up full space
-  max-height: 500px !important; // this prevents the image from being extremely big
-  object-fit: cover; 
-  object-position: center; /* this centers and crops the image so that it doesn't break the aspect ratio */
+  /* this centers and crops the image so that it doesn't break the aspect ratio */
 }
 
-.button-group {
-  
+
+  .button-group {
+    display: flex;
+    flex-flow: row wrap;
+    column-gap: 1em;
+    row-gap: 1em;
+    align-content:center;
+    justify-content: space-around;
+    width: fit-content;
+    
 }
